--- a/index.html
+++ b/index.html
@@ -9,6 +9,27 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
+    <main>
+        <div id="displey">1488</div>
+        <div id="buttons-container">
+            <button class="number-button" id="0">0</button>
+            <button class="number-button" id="1">1</button>
+            <button class="number-button" id="2">2</button>
+            <button class="number-button" id="3">3</button>
+            <button class="number-button" id="4">4</button>
+            <button class="number-button" id="5">5</button>
+            <button class="number-button" id="6">6</button>
+            <button class="number-button" id="7">7</button>
+            <button class="number-button" id="8">8</button>
+            <button class="number-button" id="9">9</button>
+            <button class="operator-button" id="substract">-</button>
+            <button class="operator-button" id="add">+</button>
+            <button class="operator-button" id="divide">/</button>
+            <button class="operator-button" id="multiply">*</button>
+            <button class="operator-button" id="equal">=</button>
+            <button class="operator-button" id="clear">Clear</button>
+        </div>
+    </main>
     <footer class="footer">
         <p>
             Copyright ©
