Keyboard support only integer

--- a/index.html
+++ b/index.html
@@ -10,24 +10,26 @@
 </head>
 <body>
     <main>
-        <div id="displey">1488</div>
+        <div id="display"></div>
         <div id="buttons-container">
-            <button class="number-button" id="0">0</button>
-            <button class="number-button" id="1">1</button>
-            <button class="number-button" id="2">2</button>
-            <button class="number-button" id="3">3</button>
-            <button class="number-button" id="4">4</button>
-            <button class="number-button" id="5">5</button>
-            <button class="number-button" id="6">6</button>
-            <button class="number-button" id="7">7</button>
-            <button class="number-button" id="8">8</button>
-            <button class="number-button" id="9">9</button>
-            <button class="operator-button" id="substract">-</button>
+            <button class="number-button" id="Digit1">1</button>
+            <button class="number-button" id="Digit2">2</button>
+            <button class="number-button" id="Digit3">3</button>
+            <button class="number-button" id="Digit4">4</button>
+            <button class="number-button" id="Digit5">5</button>
+            <button class="number-button" id="Digit6">6</button>
+            <button class="number-button" id="Digit7">7</button>
+            <button class="number-button" id="Digit8">8</button>
+            <button class="number-button" id="Digit9">9</button>
+            <button class="number-button" id="Digit0">0</button>
+            <button class="operator-button" id="Minus">-</button>
             <button class="operator-button" id="add">+</button>
-            <button class="operator-button" id="divide">/</button>
+            <button class="operator-button" id="Slash">/</button>
             <button class="operator-button" id="multiply">*</button>
-            <button class="operator-button" id="equal">=</button>
-            <button class="operator-button" id="clear">Clear</button>
+            <button class="dot-button" id="Period">.</button>
+            <button class="operation-button" id="Equal">=</button>
+            <button class="operation-button" id="KeyC">Clear</button>
+            <button class="operation-button" id="Backspace">Delete</button>
         </div>
     </main>
     <footer class="footer">
@@ -42,5 +44,6 @@
             <i class="fa fa-github" style="font-size:30px;color:black"></i>
         </a>
     </footer>
+    <script src="./scrypt.js"></script>
 </body>
 </html>
