--- a/index.html
+++ b/index.html
@@ -10,26 +10,29 @@
 </head>
 <body>
     <main>
-        <div id="display"></div>
-        <div id="buttons-container">
-            <button class="number-button" id="Digit1">1</button>
-            <button class="number-button" id="Digit2">2</button>
-            <button class="number-button" id="Digit3">3</button>
-            <button class="number-button" id="Digit4">4</button>
-            <button class="number-button" id="Digit5">5</button>
-            <button class="number-button" id="Digit6">6</button>
-            <button class="number-button" id="Digit7">7</button>
-            <button class="number-button" id="Digit8">8</button>
-            <button class="number-button" id="Digit9">9</button>
-            <button class="number-button" id="Digit0">0</button>
-            <button class="operator-button" id="Minus">-</button>
-            <button class="operator-button" id="add">+</button>
-            <button class="operator-button" id="Slash">/</button>
-            <button class="operator-button" id="multiply">*</button>
-            <button class="dot-button" id="Period">.</button>
-            <button class="operation-button" id="Equal">=</button>
-            <button class="operation-button" id="KeyC">Clear</button>
-            <button class="operation-button" id="Backspace">Delete</button>
+        <h1 id="title-text">Calculator</h1>
+        <div class="calculator">
+            <div id="display"></div>
+            <div id="buttons-container">
+                <button class="operation-button" id="KeyC">Clear</button>
+                <button class="operation-button" id="Backspace">Delete</button>
+                <button class="number-button" id="Digit7">7</button>
+                <button class="number-button" id="Digit8">8</button>
+                <button class="number-button" id="Digit9">9</button>
+                <button class="operator-button" id="Slash">/</button>
+                <button class="number-button" id="Digit4">4</button>
+                <button class="number-button" id="Digit5">5</button>
+                <button class="number-button" id="Digit6">6</button>
+                <button class="operator-button" id="multiply">*</button>
+                <button class="number-button" id="Digit1">1</button>
+                <button class="number-button" id="Digit2">2</button>
+                <button class="number-button" id="Digit3">3</button>
+                <button class="operator-button" id="Minus">-</button>
+                <button class="dot-button" id="Period">.</button>
+                <button class="number-button" id="Digit0">0</button>
+                <button class="operation-button" id="Equal">=</button>
+                <button class="operator-button" id="add">+</button>
+            </div>
         </div>
     </main>
     <footer class="footer">
